[package]
name = "cleaniit"
version = "0.1.0"
authors = ["jlgerber <jlgerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="0.2.18", features=["macros","tcp", "dns", "io-util", "process"]}
chrono = "0.4.11"
log = "0.4.8"
main_error = "0.1.0"
env_logger = "0.7.1"
structopt = "0.3.13"

[dependencies.tokio-postgres]
version="0.5.3"
features = ["with-chrono-0_4"]
